p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: "nginx:alpine"
        command: ["/bin/sh"]
        args: ["-c", "echo 'app1' > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app1-sesrvice
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
